# Compare_two_folders

./: .gitignore  .gitmodules  Cargo.toml  GEMINI.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  comtwofolsha.c  improvement.txt
.github/workflows/: prerelease.yml  release.yml  rust-ci.yml
c/: Makefile  README.md  compare_folders
c/src/: color.h  file_utils.c  file_utils.h  hash_utils.c  hash_utils.h  json_utils.c  json_utils.h  main.c  report.c  report.h
comtwofolsha_rust/: Cargo.toml
rust/: Cargo.toml  README.md
rust/src/: main.rs
src/: compare.rs  main.rs  models.rs  report.rs  snapshot.rs  sync.rs  tests.rs  utils.rs
