[package]
name = "cmpf"
version = "4.1.0"
edition = "2024"
authors = ["sms1sis <sadimsajid2004@gmail.com>"]
license = "GPL-3.0-or-later"
description = "A fast command-line tool to compare the contents of two folders"
repository = "https://github.com/sms1sis/Compare_two_folders"
categories = ["command-line-utilities", "filesystem"]
keywords = ["compare", "folder", "diff", "directory", "sync"]

[dependencies]
sha2 = "0.10"
blake3 = { version = "1.8", default-features = false, features = ["std", "rayon"] }
colored = "3.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
rayon = "1.11"
anyhow = "1.0"
serde_json = "1.0"
indicatif = { version = "0.18", features = ["rayon"] }
ignore = "0.4"
globset = "0.4"
chrono = "0.4.42"
memmap2 = "0.9"
generic-array = "0.14.9"

[profile.release]
opt-level = 3              # (Default, but good to be explicit)
lto = "fat"                # Maximum whole-program optimization
codegen-units = 1          # Maximum code optimization at the cost of compile time
strip = "symbols"          # Reduce binary size

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1"

[dev-dependencies]
tempfile = "3.10"
