[package]
name = "cmpf"
version = "5.2.0"
edition = "2024"
authors = ["sms1sis <sadimsajid2004@gmail.com>"]
license = "GPL-3.0-or-later"
description = "A fast command-line tool to compare the contents of two folders"
repository = "https://github.com/sms1sis/Compare_two_folders"
categories = ["command-line-utilities", "filesystem"]
keywords = ["compare", "folder", "diff", "directory", "sync"]

[dependencies]
sha2 = "0.11.0-rc.5"
blake3 = { version = "1.8.3", features = ["rayon"] }
colored = "3.1.1"
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.6.0", features = ["derive"] }
rayon = "1.11.0"
anyhow = "1.0.102"
serde_json = "1.0.149"
indicatif = { version = "0.18.4", features = ["rayon"] }
ignore = "0.4.25"
globset = "0.4.18"
chrono = "0.4.44"
memmap2 = "0.9.10"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.48"

[dev-dependencies]
tempfile = "3.17.1"
